--- a/src/components/CourseGoals/CourseInput.css
+++ b/src/components/CourseGoals/CourseInput.css
@@ -22,3 +22,12 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+
+.form-control.inValid input {
+  border-color: red;
+  background: #ffd7d7;
+}
+
+.form-control.inValid label {
+  color: red;
+}
